# PromoAgent

./: .gitignore  README.md  main.py  pyproject.toml
frontend/: index.html
frontend/src/: App.tsx
frontend/src/components/: ActivityFeed.tsx  InputSection.tsx  ResultsSection.tsx
frontend/src/services/: api.ts
src/: __init__.py
src/api/: __init__.py  notifier.py  reddit_api.py
src/backend/: __init__.py  server.py
src/core/: __init__.py  agent_graph.py  main.py
src/models/: __init__.py  model.py  prompt.py
src/supabase/: README.md  __init__.py  client.py  reddit_api_supabase.py  setup.py
src/test/: __init__.py  test.py
src/utils/: __init__.py  config.py  logger.py  utils.py
